[metadata]
name = es-stats
description = "Collect metrics from Elasticsearch"
long_description = file: README.rst
version = attr: es_stats._version.__version__
author = Aaron Mildenstein
author_email = aaron@mildensteins.com
url = http://github.com/untergeek/es_stats
license = Apache License, Version 2.0
keywords = elasticsearch, stats
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = es_stats
include_package_data = True
install_requires =
    setuptools>=30.3.0
    dotmap>=1.2.20
    elasticsearch==5.5.2

[bdist_wheel]
universal=1
